xsoar/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xsoar
  labels:
    istio-injection: enabled
