xsoar/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xsoar-ui
  namespace: xsoar
spec:
  hosts:
    - "xsoar.###ZARF_VAR_DOMAIN###"
  gateways:
    - istio-system/dataplane
  http:
    - route:
        - destination:
            host: xsoar.xsoar.svc.cluster.local
            port:
              number: 8888
